err/collective.adlibsyncmanager.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/adlibsyncmanager'...
Listing './lib/python3.5/site-packages/collective/adlibsyncmanager/Extensions'...
Compiling './lib/python3.5/site-packages/collective/adlibsyncmanager/Extensions/adlib_migration.py'...
***   File "./lib/python3.5/site-packages/collective/adlibsyncmanager/Extensions/adlib_migration.py", line 27
    print "Skipped list:"
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/collective/adlibsyncmanager/Extensions/adlib_sync_manager.py'...
***   File "./lib/python3.5/site-packages/collective/adlibsyncmanager/Extensions/adlib_sync_manager.py", line 24
    print "Last request successfull %s" % (last_request_successful)
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/collective/adlibsyncmanager/api_migrator.py'...
***   File "./lib/python3.5/site-packages/collective/adlibsyncmanager/api_migrator.py", line 79
    print "!=== Folder check failed ==="
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/collective/adlibsyncmanager/sync_mechanism.py'...
***   File "./lib/python3.5/site-packages/collective/adlibsyncmanager/sync_mechanism.py", line 62
    print "Build request for: %s" % (quoted_query)
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/collective/adlibsyncmanager/xml_migrator.py'...
***   File "./lib/python3.5/site-packages/collective/adlibsyncmanager/xml_migrator.py", line 119
    print "== Translation created =="
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/collective.adlibsyncmanager-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
